<resources>
    <string name="app_name">Nac01Grupo03</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_version">1.0.0.1</string>

    <string name="pedra">Pedra</string>
    <string name="tesoura">Tesoura</string>
    <string name="papel">Papel</string>
    <string name="score_divider">X</string>
    <string name="player_score">Player</string>
    <string name="cpu_score">CPU</string>
    <string name="player_choose_placeholder">...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="player_name_label">Player name:</string>
    <string name="play_button">Jogar</string>
    <string name="ranking_btn_label">Top 10</string>
    <string name="top_10_title">TOP 10</string>
</resources>